Add basic link for user oganization to frontend
